--- a/contato.html
+++ b/contato.html
@@ -72,12 +72,12 @@
 						<td>8h ~ 20h</td>
 					</tr>
 					<tr>
-						<td>Quarta</td>
-						<td>8h ~ 20h</td>
+						<td>Sábado</td>
+						<td>14h ~ 5h</td>
 					</tr>
 					<tr>
-						<td>Sexta</td>
-						<td>8h ~ 20h</td>
+						<td>Domingo</td>
+						<td>00h ~ 4h</td>
 					</tr>
 				</tbody>
 			</table>
